# owtf

./: .bumpversion.cfg  .deepsource.toml  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .project  .pydevproject  .travis.yml  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.dev  LICENSE  LICENSE.md  MANIFEST.in  Makefile  README  README.md  README.rst  SECURITY.md  Username_Password.txt  docker-compose-linux-x86_64.sha256  docker-compose.dev.yml  docker-compose.yml  gulpfile.js  hosts.txt  output  owtf.db  owtf.py  package.json  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tcp_ports  test.sh  (+4 more)
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
agents/: bt5_install.sh
config/: framework_config.cfg
configuration/: framework_config.cfg  framework_config.cfg.default  resources.cfg
contrib/: bootstrap.sh
debian/: changelog  control  copyright  files  owtf.postinst.debhelper  owtf.substvars  owtf.triggers  rules
deploy/: supervisord.conf
dictionaries/: README  dict_merger_svndigger_raft.py  drupalmodulesextractor.py  install_dicts.sh  update_convert_cms_explorer_dicts.sh
docker/: Dockerfile  default.settings.py  docker-compose.dev.yml  docker-compose.yml  wait-for-it.sh
docs/: .gitignore  Makefile  README.md  api.rst  conf.py  config.rst  docs-requirements.txt  help.rst  index.rst  install.rst  modules.rst  owtf.api.handlers.rst  owtf.api.rst  owtf.cli.rst  owtf.config.rst  owtf.db.rst  owtf.dependency_management.rst  (+23 more)
(+2068 files in other folders)
