[bumpversion]
current_version = 2.3b
commit = True
tag = True

[metadata]
description-file = README.md

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bdist_wheel]
universal=1

[flake8]
ignore = E111,E114,E121,E125,E128
exclude = .git,__pycache__,*.pyc,*.pyo,.tox,.eggs,*.egg-info,.ropeproject,scratch
max-line-length = 120
doctests = True

[pep8]
ignore = E111,E114,E121,E125,E128
max_line_length = 120

[pylama:pep8]
max_line_length = 120

[tool:pytest]
norecursedirs=.* *.egg *.egg-info owtf/
doctest_optionflags=ALLOW_UNICODE ELLIPSIS

[build_sphinx]
source-dir = docs/source
build-dir  = docs/build
all_files  = 1

[upload_sphinx]
upload-dir = doc/build/html
